# Kids-Code-Python

./: FILE_DESCRIPTIONS.md  HELPFULSTUFF.md  README.md  TODO.md  app.py  db.py  forms.py  pyproject.toml  run.py  tests.py  user.py
python/: config.py  db.py  errors.py  forms.py  md.py  sentry.py  tests.py  user.py
static/: style.css
templates/: index.html  login.html  user.py  user_commands.py
templates/jinja2_templates/: base.html  class.html  user.html
tests/: log.txt
