[tool.poetry]
name = "kids-code-python"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-bootstrap = "^3.3.7"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
sentry-sdk = "^0.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
